--- a/Processing_Stable/01_Registration/Scripts/image_registration.yml
+++ b/Processing_Stable/01_Registration/Scripts/image_registration.yml
@@ -4,11 +4,11 @@ channels:
   - defaults
 dependencies:
   - python=3.10  
-  - numpy
+  - numpy>=1.24
   - scipy
   - matplotlib
   - networkx
-  - scikit-image
+  - scikit-image>=0.21
   - scikit-learn
   - tifffile<2025.2.18
   - zarr<3
